# stock_db

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  RULES.md  codereview-report.md  pyproject.toml  todo.md  trash_data_list.md
.github/workflows/: update-stooq-prices.yml
browser_service/: package-lock.json  package.json
config/: cli_defaults.toml  edinet_phase1.toml  jpx_market_holidays.toml  magic_numbers.toml  shikiho_dividend_overrides.toml
rust/: Cargo.toml
rust/src/: artifact.rs  auto_update.rs  db.rs  financials.rs  inventory.rs  lib.rs  price_lookup.rs  screening.rs  share_classes.rs  stooq.rs  types.rs  xml_util.rs
scripts/: download_irbank.py  export_csv.py  fetch_prices.py  fetch_shares.py  generate_check_sites.py  migrate_screening_db.py  scrape_irbank_bs.py
services/: downstream_refresh.py
services/browser/: browser_pool.js  browser_pool.test.js  package-lock.json  package.json  server.js
services/systemd/user/: stock-db-downstream-refresh.service  stock-db-downstream-refresh.timer  stock-db-price-refresh.service  stock-db-price-refresh.timer
src/stock_db/: api.py  browser.py  browser_client.py  config.py  market_calendar.py  paths.py  proxy.py  proxy_pool.py  stealth.py
src/stock_db/browser/: proxy_pool.py
src/stock_db/browser_client/: client.py
src/stock_db/cli/: compute_eps.py  fetch_irbank_files.py  generate_validation_site_list.py  inspect_stock_db.py  parse_xbrl_bs.py  parse_xbrl_financials.py  purge_irbank_bs.py  purge_irbank_financials.py  refresh_prices.py  report_edinet_progress.py  scheduled_refresh_prices.py  scrape_edinet_historical.py  scrape_edinet_reports.py  scrape_edinet_reports_step1.py  scrape_edinet_reports_step2.py  scrape_edinet_watchdog.py  scrape_irbank_bs.py  scrape_stooq_prices.py  scrape_yahoo_finance_prices.py  sync_shikiho_dividends.py  sync_shikiho_forecasts.py
src/stock_db/db/: connection.py  repo.py  schema.py
src/stock_db/scraping/: check_sites.py  irbank.py  validation_sites.py
src/stock_db/sources/: price_refresh.py
src/stock_db/sources/edinet/: api_client.py  document_list.py  pdf_extractor.py  search_scraper.py  xbrl_bs_parser.py  xbrl_financials_parser.py  xbrl_share_classes_parser.py
src/stock_db/sources/irbank/: bs_parser.py  bs_scraper.py  downloader.py
src/stock_db/sources/stooq/: __init__.py  captcha_solver.py  downloader.py  parser.py  (+2 more)
src/stock_db/storage/: financials.py  market_caps.py  prices.py  schema.py  sec_reports.py  share_classes.py  stocks.py
src/stock_db/tools/: validation_site_list.py
tests/: conftest.py  test_api.py  test_browser.py  test_browser_client.py  test_config_loading.py  test_connection.py  test_market_calendar.py  test_paths.py  test_proxy.py  test_proxy_pool.py  test_queries.py  test_repo.py  test_schema.py  test_scraping_check_sites.py  test_scraping_irbank.py  test_scraping_validation_sites.py  test_stealth.py  test_systemd_units.py
tests/browser/: test_client.py  test_proxy_pool.py
tests/browser_client/: test_client.py
tests/cli/: test_inspect_stock_db.py  test_parse_xbrl_financials.py  test_purge_irbank_financials.py  test_refresh_prices.py  test_report_edinet_progress.py  test_scheduled_refresh_prices.py  test_scrape_edinet_historical.py  test_scrape_edinet_reports.py  test_scrape_edinet_watchdog.py  test_scrape_stooq_prices.py  test_sync_shikiho_dividends.py  test_sync_shikiho_forecasts.py
tests/sources/: test_edinet_api_client.py  test_edinet_document_list.py  test_edinet_pdf_extractor.py  test_edinet_search_scraper.py  test_irbank_bs_scraper.py  test_irbank_downloader.py  test_price_refresh.py  test_stooq_captcha_solver.py  test_stooq_downloader.py  test_stooq_parser.py  test_stooq_updater.py  test_validation_site_list.py  test_xbrl_bs_parser.py  test_xbrl_financials_parser.py  test_xbrl_share_classes_parser.py  test_yahoo_finance_jp_parser.py  test_yahoo_finance_jp_scraper.py
tests/storage/: test_connection.py  test_financials.py  test_market_caps.py  test_prices.py  test_schema.py  test_sec_reports.py  test_share_classes.py  test_stocks.py
tests/tools/: test_validation_site_list.py
var/db/: stocks.db
var/reference/: all_stocks.csv
var/reference/proxies/: webshare.txt
var/reports/: stocks_db_audit_20260429.md
(+3 files in other folders)
