[project]
name = "stock-db"
version = "0.1.0"
description = "Shared stock database and browser service for Japanese equity research"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28,<3",
    "truststore>=0.9,<1",
    "brotli>=1.1,<2",
    "pysocks>=1.7,<2",
    "beautifulsoup4>=4.14.3,<5",
    "pillow>=11.3,<12",
    "pypdf>=5.0,<6",
    "pdfminer.six>=20250327,<20260000",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
fetch-irbank-files = "stock_db.cli.fetch_irbank_files:main"
generate-validation-site-list = "stock_db.cli.generate_validation_site_list:main"
scrape-irbank-bs = "stock_db.cli.scrape_irbank_bs:main"
purge-irbank-bs = "stock_db.cli.purge_irbank_bs:main"
scrape-edinet-reports = "stock_db.cli.scrape_edinet_reports:main"
report-edinet-progress = "stock_db.cli.report_edinet_progress:main"
scrape-stooq-prices = "stock_db.cli.scrape_stooq_prices:main"
parse-xbrl-bs = "stock_db.cli.parse_xbrl_bs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_db"]
