[project]
name = "stock-db"
version = "0.1.0"
description = "Shared stock database and browser service for Japanese equity research"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28,<3",
    "truststore>=0.9,<1",
    "brotli>=1.1,<2",
    "pysocks>=1.7,<2",
    "beautifulsoup4>=4.14.3,<5",
    "pillow>=11.3,<12",
    "yfinance==1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
generate-validation-site-list = "stock_db.cli.generate_validation_site_list:main"
scrape-edinet-reports = "stock_db.cli.scrape_edinet_reports:main"
scrape-edinet-reports-step1 = "stock_db.cli.scrape_edinet_reports_step1:main"
scrape-edinet-reports-step2 = "stock_db.cli.scrape_edinet_reports_step2:main"
report-edinet-progress = "stock_db.cli.report_edinet_progress:main"
scrape-stooq-prices = "stock_db.cli.scrape_stooq_prices:main"
scrape-yahoo-finance-prices = "stock_db.cli.scrape_yahoo_finance_prices:main"
parse-xbrl-bs = "stock_db.cli.parse_xbrl_bs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_db"]
